// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Statuses should render status with {"status":"new"} 1`] = `
<div
  className="New"
>
  new
</div>
`;

exports[`Statuses should render status with {"text":"custom label","status":"new","hasHover":true} 1`] = `
<div
  className="New hasHover"
>
  custom label
</div>
`;
